# luaplusplus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
test_files/: syntax_error.lua  test_normal.lua
